# HistoryCal

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  readme.md  readme.txt
docs/: cal-lib-changes.txt  hcal-changes.txt
docs/diagrams/: inter.dia  rel-comp.dia  sym-dif.dia
example/: Islamic-IIIc.hcs  Islamic-IVa.hcs  Islamic-IVc.hcs  Islamic-Ia.hcs  Islamic-Ic.hcs  day-counts.hcs  easter.hcs  fr-roman-format.hcs  html-format.hcs  iso-format.hcs  iso.hcs  iso5.hcs  iso6.hcs  misc-calc.hcs  spanish-era.hcs  today-is.hcs
images/logo1/: logo1.hqx  logo1.icns
include/cal/: caldefs.h  calendars.h
include/utf8/: utf8api.h
pack/: pack-all.bat  release-check-list.txt  release-readme.txt
pack/src/: createsource.bat
pack/win/: createpack.bat  hcal.nsi  license.txt
scripts/: base.hcs  caldefscripts.f2c  caldefscripts.template  ce-bce.hcs  chinese.hcs  default.hcs  easter.hcs  english_reg.hcs  french_rep.hcs  hebrew.hcs  islamic.hcs  iso.hcs  jdn.hcs  julian.hcs  julian_hybrid.hcs  liturgical.hcs  makedefault.bat  scottish_reg.hcs  stdlib.hcs
src/: dummy.cpp
src/cal/: CMakeLists.txt  calastro.cpp  calastro.h  calbase.cpp  calbase.h  calcalendars.cpp  calchinese.cpp  calchinese.h  calcyclic.cpp  calcyclic.h  caldefscripts.cpp  caldefscripts.h  caldlist.cpp  caldlist.h  caleaster.cpp  caleaster.h  calelement.cpp  calelement.h  calera.cpp  calera.h  calfile.cpp  calfile.h  calformat.cpp  calformat.h  calformatiso.cpp  calformatiso.h  calformattext.cpp  calformattext.h  calformatunit.cpp  calformatunit.h  calfrench.cpp  calfrench.h  calfunction.cpp  calfunction.h  calgrammar.cpp  calgrammar.h  calgregorian.cpp  calgregorian.h  calhebrew.cpp  calhebrew.h  (+53 more)
src/hcal/: CMakeLists.txt  Thumbs.db  hcal.fbp  hcal.rc  hcal.xpm  hcapp.cpp  hcapp.h  hcconvert.h  hcfbformatdlg.cpp  hcfbformatdlg.fbp  hcfbformatdlg.h  hcfbframe.cpp  hcfbframe.h  hcformatdlg.cpp  hcformatdlg.h  hcframe.cpp  hcframe.h  hcnewformatdlg.cpp  hcnewformatdlg.h  hcversion.cpp  hcversion.h
src/hcs/: CMakeLists.txt  hcs.cpp  hcs.rc  hcsmain.h  hcsresource.h
src/test/: def_eng.cpp  def_g.cpp  testcommon.h  testera.cpp  testgrammar.cpp  testhybrid.cpp  testj325.cpp  testvocab.cpp  testweekly.cpp
src/utf8/: CMakeLists.txt  utf8api.cpp
test/: run.bat  runSoakD.bat  runSoakR.bat  runUnitD.bat  runUnitR.bat
test/hcs/: hcs.cpp  hcsgetfns.cpp
test/hctest/: CMakeLists.txt  hcsgetfns.cpp  hctest.cpp  hctestmain.h
test/scripts/: runtest.bat
test/scripts/test/: mark001.hcs  write002.hcs  write003.hcs  write004.hcs  write005.hcs  write006.hcs  write007.hcs  write008.hcs  write009.hcs  write010.hcs  write011.hcs  write014.hcs  write016.hcs  write017.hcs  write019.hcs  write020.hcs  write021.hcs
test/soak/: CMakeLists.txt  soak_eng.cpp  soak_er.cpp  soak_fr.cpp  soak_g.cpp  soak_h.cpp  soak_i.cpp  soak_j.cpp  soak_j325.cpp  soakcommon.cpp  soakcommon.h  soakmain.cpp  testgregorian.cpp  testjulian.cpp
test/tscripts/: runtest.bat  runtestb.bat  runtestr.bat  runtestrelease.bat
test/tscripts/suite/bugs/: bug1.hcs  bug2.hcs  bug3.hcs
test/tscripts/suite/cals/: astro003.hcs  astro005.hcs  astro006.hcs  easter001.hcs  easter003.hcs  jce_001.hcs  jce_002.hcs  je_001.hcs  je_002.hcs  je_003.hcs
test/tscripts/suite/expressions/: convert001.hcs  convert002.hcs  convert003.hcs  convert004.hcs  date008.hcs  date013.hcs  divide004.hcs  literal001.hcs  literal003.hcs  minus003.hcs  minus010.hcs  mod004.hcs  multiply001.hcs  plus010.hcs  record004.hcs  record008.hcs  string003.hcs  string010.hcs  subscript007.hcs  subscript010.hcs
test/tscripts/suite/functions/: function002.hcs  function008.hcs  (+4 more)
test/tscripts/test/: astro001.hcs  astro002.hcs  astro003.hcs  astro004.hcs  astro006.hcs  bool001.hcs  clear001.hcs  date001.hcs  date002.hcs  date003.hcs  date004.hcs  date005.hcs  date006.hcs  date008.hcs  date009.hcs  date010.hcs  divide002.hcs  divide003.hcs  divide005.hcs  do001.hcs  do004.hcs  do006.hcs  do007.hcs  do009.hcs  easter001.hcs  easter002.hcs  easter003.hcs  easter004.hcs  error001.hcs  function001.hcs  function005.hcs  function006.hcs  function007.hcs  function008.hcs  function009.hcs  function011.hcs  if002.hcs  if003.hcs  if005.hcs  if006.hcs  (+100 more)
test/unit/: CMakeLists.txt  api_expr_str.cpp  def_eng.cpp  def_er.cpp  def_expr_str.cpp  def_fr.cpp  def_g.cpp  def_glit.cpp  def_h.cpp  def_i.cpp  def_isoo.cpp  def_isow.cpp  def_j325.cpp  def_jce.cpp  def_je.cpp  def_jlit.cpp  testcal.cpp  testchinese.cpp  testcommon.cpp  testcommon.h  testera.cpp  testformat.cpp  testfrenchrep.cpp  testgrammar.cpp  testgregorian.cpp  testhebrew.cpp  testhybrid.cpp  testislamic.cpp  testiso.cpp  testj325.cpp  testjulian.cpp  testmain.cpp  testregnal.cpp  testshiftday.cpp  testvocab.cpp
util/file2cpp/: fcHistory.txt  fcSpec.txt  file2cpp.cpp
website/: gloss.htm  index.htm  map.htm  support.htm
website/cal/: 7dayweek.htm  eng.htm  er.htm  fr.htm  g.htm  h.htm  i.htm  if.htm  ims.htm  index.htm  j.htm  j325.htm  ja.htm  jap.htm  jb.htm  jdn.htm  jn.htm  liturgical.htm  roman.htm  scot.htm  se.htm  sr.htm
website/cal/defs/: 7dayweek.htm  ay.htm  eng.htm  er.htm  fr.htm  g.htm  gce.htm  glit.htm  h.htm  i.htm  if.htm  ims.htm  index.htm  isoo.htm  isow.htm  j.htm  ja.htm  jap.htm  jce.htm  jdn.htm  jlit.htm  jn.htm  liturgical.htm  scot.htm  se.htm  sr.htm
website/dev/: index.htm  routemap.htm
website/dev/lib/: index.htm
website/dev/man/: calculate.htm  convert.htm  formatting.htm  gloss.htm  index.htm  ranges.htm
website/dev/man2/: calculate.htm  convert.htm  formatting.htm  gloss.htm  index.htm  ranges.htm
website/dev/scripts/: codes.htm  index.htm
website/dev/tests/: index.htm  script.htm
website/img/: Thumbs.db
website/lib/: develop.htm  index.htm
website/man/: calculate.htm  convert.htm  index.htm  manual-ind.htm  ranges.htm  script.htm  types.htm
website/man/script/: expr.htm  index.htm  script.htm
website/new/: news.htm
website/sys/: hcal.css  list.css  livery.css
webutil/: layout.json  make-from-website.bat  manual-0-0-7.json  manual-0-1-0.json  script-0-3-0.json  statistics.txt
(+304 files in other folders)
