# Basic hello program

set(CAL_HEADERS
    ../../include/cal/caldefs.h
    ../../include/cal/calendars.h
    calastro.h<
    calbase.h
    calchinese.h
    caldefscripts.h
    caldlist.h
    caleaster.h
    calelement.h
    calfile.h
    calformat.h
    calformatiso.h
    calformattext.h
    calformatunit.h
    calfrench.h
    calfunction.h
    calgrammar.h
    calgregorian.h
    calhebrew.h
    calislamic.h
    calisoordinal.h
    calisoweek.h
    calhybrid.h
    caljdn.h
    caljulian.h
    calliturgical.h
    calmark.h
    calmath.h
    calparse.h
    calpattern.h
    calprivate.h
    calrecord.h
    calregnal.h
    calscheme.h
    calscript.h
    calscriptstore.h
    calsetmath.h
    calshift.h
    calshiftday.h
    calstokenstream.h
    calsvalue.h
    caltext.h
    calversion.h
    calvocab.h
)
set(CAL_SOURCES
    calastro.cpp
    calbase.cpp
    calcalendars.cpp
    calchinese.cpp
    caldefscripts.cpp
    caldlist.cpp
    caleaster.cpp
    calelement.cpp
    calfile.cpp
    calformat.cpp
    calformatiso.cpp
    calformattext.cpp
    calformatunit.cpp
    calfrench.cpp
    calfunction.cpp
    calgrammar.cpp
    calgregorian.cpp
    calhebrew.cpp
    calislamic.cpp
    calisoordinal.cpp
    calisoweek.cpp
    calhybrid.cpp
    caljdn.cpp
    caljulian.cpp
    calliturgical.cpp
    calmark.cpp
    calmath.cpp
    calparse.cpp
    calpattern.cpp
    calrecord.cpp
    calregnal.cpp
    calscheme.cpp
    calscript.cpp
    calsetmath.cpp
    calshift.cpp
    calstokenstream.cpp
    calsvalue.cpp
    caltext.cpp
    calversion.cpp
    calvocab.cpp
)

add_library(cal ${CAL_SOURCES} ${CAL_HEADERS})
target_link_libraries(cal utf8api)

# Make sure the compiler can find include files for our Hello library
# when other libraries or executables link to Hello
target_include_directories (cal PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/../../include
)
